@@ -5,6 +5,7 @@ AR=$(CROSS)ar
 AS=$(CROSS)as
 CC=$(CROSS)gcc
 CXX=$(CROSS)g++
+STRIP=$(CROSS)strip
 INSTALL=install
 INSTALL_DATA = $(INSTALL) -m 644
 TAR=tar
@@ -22,6 +23,7 @@ FLAGS_TO_PASS = \
 	'MULTILIB_FLAGS=$(MULTILIB_FLAGS)' \
 	'MULTILIB=$(MULTILIB)' \
 	'DESTDIR=$(DESTDIR)' \
+	'STRIP=$(STRIP)' \
 	'SUFFIX=$(SUFFIX)' \
 	'TAR=$(TAR)' \
 	'USR=$(USR)'
